Mobile overflow problem fixed

--- a/completed.css
+++ b/completed.css
@@ -76,6 +76,8 @@ ul {
 
 #request_wrapper
 {
+	position:fixed;
+	width:100%;
 	margin: auto;
 	margin-top:4.3em;
 	height : 91%;
