--- a/request.css
+++ b/request.css
@@ -1,5 +1,5 @@
 body{
-	overflow: hidden;
+	
 }
 
 .ui.segment {
@@ -112,9 +112,11 @@ ul {
 
 #request_wrapper
 {
+	position:fixed;
+	width:100%;
+	height:50%;
 	margin: auto;
 	margin-top:360px;
-	height : 50%;
 	overflow: auto;
 }
 
